# omndx

./: .env  .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  docker-compose.yml  orchestrator.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  lint.yml  tests.yml  type.yml
docker/: gen-env.sh
docs/: CONFIGURATION.md  agent_forge.md  llm_adapter.md  symbolic_planner.md  todo.md
omndx/: README.md  __init__.py  libertatia.zip:Zone.Identifier  orchestrator.py  preflight.py  py.typed  requirements.txt
omndx/agents/: __init__.py  agent_logger.py  agent_template.py  core_agent.py  factory.py  llm_local.py  planner_agent.py  recommender_agent.py  repair_agent.py  tagger_agent.py  tooling.py
omndx/contribution/: __init__.py  contribution_policy.yaml  credit_tracker.py  llm_access_gate.py  trust_score_calculator.py  usage_throttler.py
omndx/core/: __init__.py  agent_forge.py  agent_router.py  jaeger_tracer.py  (+8 more)
tests/: test_agent_flow.py  test_agent_forge.py  test_agent_router_behavior.py  test_agents.py  test_agents_basic.py  test_bootstrap.py  test_chat_memory.py  test_chat_memory_no_chroma.py  test_contribution.py  test_core_agent.py  test_instrumentation.py  test_langchain_smoke.py  test_llm_adapter.py  test_mesh_integration.py  test_metrics.py  test_orchestrator_async.py  test_preflight.py  test_runtime_utils.py  test_sandbox_manager.py  test_security.py  test_storage.py  test_symbolic_planner.py  test_task_registry.py  test_ui.py  test_watchdog.py
(+31 files in other folders)
