[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omndx"
version = "0.1.0"
description = "OMNDX platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
langchain = ["langchain>=0.1", "langchain-community>=0.0.20", "langchain-openai>=0.0.5"]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "coverage"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["omndx*"]
